# antithesis

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  app.py  fly.toml  main.py  pyproject.toml
backend/app/: __init__.py  database.py  models.py  web.py
backend/docs/: schema.md
backend/migrations/: 001_initial_schema.sql
backend/seeds/: __init__.py  load_seeds.py  phrase_pairs.csv  phrases.csv  votes.csv
backend/tests/: test_models.py
backend/tests/api/: __init__.py  test_quiz_endpoint.py  test_vote_endpoint.py
frontend/: .env.example  fly.toml  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
