[project]
name = "backend"
version = "0.1.0"
description = "Simple Flask API for the React Vite frontend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask",
  "flask-cors",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13"
]

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-postgresql"
]
